--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".HomeActivity"></activity>
+        <activity android:name=".AllProductsActivity"></activity>
+        <activity android:name=".HomeActivity" />
         <activity android:name=".AddProductActivity" />
         <activity android:name=".NavigationActivity" />
         <activity android:name=".SignUpActivity" />
