--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".editProfile"></activity>
+        <activity android:name=".AboutUs"></activity>
+        <activity android:name=".AboutActivty" />
+        <activity android:name=".WishlistActivity" />
+        <activity android:name=".editProfile" />
         <activity android:name=".productDetail" />
         <activity android:name=".AllProductsActivity" />
         <activity android:name=".HomeActivity" />
